--- a/slides/index.html
+++ b/slides/index.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
 
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -26,46 +26,49 @@
 <body>
 <div class="reveal">
 <div class="slides">
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
 <script src="../../reveal.js/plugin/zoom/zoom.js"></script>
 <script src="../../reveal.js/plugin/notes/notes.js"></script>
 <script src="../../reveal.js/plugin/search/search.js"></script>
 <script src="../../reveal.js/plugin/markdown/markdown.js"></script>
+<!---script src="../../reveal.js/plugin/highlight/highlight.js"></script--->
+<script src="./captions.js"></script>
+
+<script src="../../reveal.js-plugins/menu/menu.js"></script>
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
+
 
 <script src="../../reveal.js-plugins/chalkboard/plugin.js"></script>
-
 <script src="../../reveal.js-plugins/audio-slideshow/plugin.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 
 <section>
-<section id="slide-org122ac0f">
-<h2 id="org122ac0f">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-orge1b9f83">
+<h2 id="orge1b9f83">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
-<li><a href="./intro_notes-2020.html">Module overview</a>: week 0</li>
-<li><a href="./python_notes.html">Introduction to Python</a>: week 1</li>
-<li>Differential balances: weeks 2-4
+<li>Week 0: <a href="./intro_notes-2020.html">Module overview</a></li>
+<li>Week 1: <a href="./python_notes.html">Introduction to Python</a></li>
+<li>Weeks 2-4: Differential balances
 <ul>
 <li><a href="./mass_notes.html">Mass and species balances</a></li>
-<li><a href="./energy_notes.html">energy balances</a></li>
+<li><a href="./energy_notes.html">Energy balances</a></li>
 <li><a href="./momentum_notes.html">Momentum/force balances</a></li>
 
 </ul></li>
-<li><a href="./ode_notes.html">Ordinary differential equations</a>: weeks 5-8</li>
-<li><a href="./multivariate_notes.html">Multivariate calculus</a>: weeks 9-10</li>
+<li>Weeks 5-8: <a href="./ode_notes.html">Ordinary differential equations</a></li>
+<li>Weeks 9-10: <a href="./multivariate_notes.html">Multivariate calculus</a></li>
 
 </ul>
-
-<p>
-For an overview of the module structure, hit &lt;ESC&gt;.  To return
-to this view, hit &lt;ESC&gt; again.
-</p>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc374b55">
-<h2 id="orgc374b55">Introduction to Python</h2>
+<section id="slide-orgb69a6fa">
+<h2 id="orgb69a6fa">Introduction to Python</h2>
 <p>
 Week 1
 </p>
@@ -77,8 +80,8 @@ For on-line materials, click <a href="./python_notes.html">here</a>.
 </section>
 </section>
 <section>
-<section id="slide-org9a7ef19">
-<h2 id="org9a7ef19">Differential balances</h2>
+<section id="slide-orgfeedc8a">
+<h2 id="orgfeedc8a">Differential balances</h2>
 <p>
 Weeks 2-4
 </p>
@@ -92,20 +95,20 @@ Weeks 2-4
 
 
 </section>
-<section id="slide-orgb2c5043">
-<h3 id="orgb2c5043">Mass and species balances</h3>
+<section id="slide-orgf35634c">
+<h3 id="orgf35634c">Mass and species balances</h3>
 </section>
-<section id="slide-org30008e9">
-<h3 id="org30008e9">Energy balance</h3>
+<section id="slide-org5282792">
+<h3 id="org5282792">Energy balance</h3>
 </section>
-<section id="slide-org3a33013">
-<h3 id="org3a33013">Momentum and force balances</h3>
+<section id="slide-org48ef0d7">
+<h3 id="org48ef0d7">Momentum and force balances</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org65fcb1d">
-<h2 id="org65fcb1d">Ordinary differential equations</h2>
+<section id="slide-orgd6523d8">
+<h2 id="orgd6523d8">Ordinary differential equations</h2>
 <p>
 Weeks 5-8
 </p>
@@ -116,20 +119,20 @@ Weeks 5-8
 </ul>
 
 </section>
-<section id="slide-org6c7c98e">
-<h3 id="org6c7c98e">First order</h3>
+<section id="slide-org109a570">
+<h3 id="org109a570">First order</h3>
 </section>
-<section id="slide-org705b1d5">
-<h3 id="org705b1d5">Second order</h3>
+<section id="slide-org7d3330a">
+<h3 id="org7d3330a">Second order</h3>
 </section>
-<section id="slide-orgbd14941">
-<h3 id="orgbd14941">Numerical methods</h3>
+<section id="slide-org31b38b0">
+<h3 id="org31b38b0">Numerical methods</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org35262f0">
-<h2 id="org35262f0">Multivariate calculus</h2>
+<section id="slide-org80c28e7">
+<h2 id="org80c28e7">Multivariate calculus</h2>
 <p>
 Weeks 9-10
 </p>
@@ -140,12 +143,12 @@ Weeks 9-10
 </ul>
 
 </section>
-<section id="slide-orge7852db">
-<h3 id="orge7852db">Partial derivatives</h3>
+<section id="slide-org7181674">
+<h3 id="org7181674">Partial derivatives</h3>
 
 </section>
-<section id="slide-org168a141">
-<h3 id="org168a141">Multiple integration</h3>
+<section id="slide-orgce13f1c">
+<h3 id="orgce13f1c">Multiple integration</h3>
 </section>
 </section>
 </div>
@@ -157,7 +160,7 @@ Weeks 9-10
 // https://github.com/hakimel/reveal.js#configuration
 Reveal.initialize({
 width:1200, height:800, rolling_links:true, keyboard:true, overview:true,
-plugins: [RevealChalkboard, RevealAudioSlideshow, RevealAudioRecorder],
+plugins: [ RevealMarkdown, RevealMenu, RevealChalkboard, RevealAudioSlideshow, RevealAudioRecorder],
 multiplex: {
     secret: '', // null if client
     id: '', // id, obtained from socket.io server
@@ -167,7 +170,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'audio/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Links', icon:  '<i class="fa fa-external-link-alt"></i>', src: 'links.html' }, ] }, chalkboard: { src: "chalkboard.json", toggleChalkboardButton: {left: "80px"}, toggleNotesButton: {left: "130px"}, }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: false, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: true, },});
 </script>
 </body>
 </html>
