--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -26,7 +26,6 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<link rel="stylesheet" href="LL.css" id="theme">
 <link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
 
 <script src="../../reveal.js/plugin/zoom/zoom.js"></script>
@@ -48,8 +47,8 @@
 
 
 <section>
-<section id="slide-org872cea5">
-<h2 id="org872cea5">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgb86a82d">
+<h2 id="orgb86a82d">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -75,8 +74,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org099b0ff" data-audio-src="intro/overview.ogg">
-<h2 id="org099b0ff">Overview</h2>
+<section id="slide-orgee38486" data-audio-src="intro/overview.ogg">
+<h2 id="orgee38486">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Chris Boyle, Umair Jamal, and Tom Stavert</li>
@@ -155,8 +154,8 @@ course.
 </aside>
 
 </section>
-<section id="slide-orgd5f6728" data-audio-src="intro/componentsofassessment.ogg">
-<h3 id="orgd5f6728">Components of assessment</h3>
+<section id="slide-orgbd9a616" data-audio-src="intro/componentsofassessment.ogg">
+<h3 id="orgbd9a616">Components of assessment</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -230,8 +229,8 @@ semester 2.
 </section>
 </section>
 <section>
-<section id="slide-org59af558" data-audio-src="intro/keylearningobjectives.ogg">
-<h2 id="org59af558">Key learning objectives</h2>
+<section id="slide-org3729d1c" data-audio-src="intro/keylearningobjectives.ogg">
+<h2 id="org3729d1c">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
@@ -293,8 +292,8 @@ solved analytically.
 </aside>
 
 </section>
-<section id="slide-orgba23f53" data-audio-src="intro/prerequisites.ogg">
-<h3 id="orgba23f53">Prerequisites</h3>
+<section id="slide-orgf071a45" data-audio-src="intro/prerequisites.ogg">
+<h3 id="orgf071a45">Prerequisites</h3>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -347,8 +346,8 @@ that you are confident that you understand them thoroughly.
 </aside>
 
 </section>
-<section id="slide-org5230090" data-audio-src="intro/schedule.ogg">
-<h3 id="org5230090">Schedule</h3>
+<section id="slide-org33b6f8b" data-audio-src="intro/schedule.ogg">
+<h3 id="org33b6f8b">Schedule</h3>
 <ul>
 <li>Week 1: Python and its applications</li>
 <li>Weeks 2-4: Differential balances</li>
@@ -409,8 +408,8 @@ materials.
 </aside>
 
 </section>
-<section id="slide-org285a171" data-audio-src="intro/learningmaterials.ogg">
-<h3 id="org285a171">Learning resources</h3>
+<section id="slide-org4a4cd79" data-audio-src="intro/learningmaterials.ogg">
+<h3 id="org4a4cd79">Learning resources</h3>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -457,8 +456,8 @@ whole.
 
 </aside>
 </section>
-<section id="slide-org05fc959" data-audio-src="intro/additionalresources.ogg">
-<h3 id="org05fc959">Additional resources</h3>
+<section id="slide-orga41a8b6" data-audio-src="intro/additionalresources.ogg">
+<h3 id="orga41a8b6">Additional resources</h3>
 <ul>
 <li>Books:
 <ul>
@@ -517,8 +516,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-orge245ab6" data-audio-src="intro/questions.ogg">
-<h2 id="orge245ab6">Questions?</h2>
+<section id="slide-org3240c4a" data-audio-src="intro/questions.ogg">
+<h2 id="org3240c4a">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
