--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
 
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -26,28 +26,45 @@
 <body>
 <div class="reveal">
 <div class="slides">
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
 <script src="../../reveal.js/plugin/zoom/zoom.js"></script>
 <script src="../../reveal.js/plugin/notes/notes.js"></script>
 <script src="../../reveal.js/plugin/search/search.js"></script>
 <script src="../../reveal.js/plugin/markdown/markdown.js"></script>
+<!---script src="../../reveal.js/plugin/highlight/highlight.js"></script--->
+<script src="./captions.js"></script>
+
+<script src="../../reveal.js-plugins/menu/menu.js"></script>
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
+
 
 <script src="../../reveal.js-plugins/chalkboard/plugin.js"></script>
-
 <script src="../../reveal.js-plugins/audio-slideshow/plugin.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
+
 <section>
-<section id="slide-orge655a94">
-<h2 id="orge655a94">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org83c7027">
+<h2 id="org83c7027">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
+
+<p class="fragment" data-audio-src="energy/title.ogg"></p>
+
+<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
+
+<aside class="notes">
+nil
+</aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org802056d">
-<h2 id="org802056d">Overview</h2>
+<section id="slide-orgec60355">
+<h2 id="orgec60355">Overview</h2>
 <ul>
 <li>Cooling of a material</li>
 <li>Fire piston</li>
@@ -58,37 +75,40 @@
 </section>
 </section>
 <section>
-<section id="slide-orgcc8e2fa">
-<h2 id="orgcc8e2fa">Cooling of a metal sphere</h2>
+<section id="slide-org850e712">
+<h2 id="org850e712">Cooling of a metal sphere</h2>
 </section>
 </section>
 <section>
-<section id="slide-org37eac0c">
-<h2 id="org37eac0c">Fire piston</h2>
-<div class="outline-text-2" id="text-org37eac0c">
+<section id="slide-org5f3bbee">
+<h2 id="org5f3bbee">Fire piston</h2>
+<div class="outline-text-2" id="text-org5f3bbee">
 </div>
 </section>
-<section id="slide-org71e15e2">
-<h3 id="org71e15e2">Background</h3>
+<section id="slide-orga793f9d">
+<h3 id="orga793f9d">Background</h3>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </section>
-<section id="slide-org809b5a4">
-<h3 id="org809b5a4">Energy balance</h3>
+<section id="slide-orgaf1f590">
+<h3 id="orgaf1f590">Energy balance</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org57f91d0">
-<h2 id="org57f91d0">Expansion engine</h2>
+<section id="slide-org36102f0">
+<h2 id="org36102f0">Expansion engine</h2>
 </section>
 </section>
 <section>
-<section id="slide-orge0d095d">
-<h2 id="orge0d095d">Summary</h2>
+<section id="slide-org7208d8e">
+<h2 id="org7208d8e">Summary</h2>
+<aside class="notes">
+nil
+</aside>
 </section>
 </section>
 </div>
@@ -100,7 +120,7 @@
 // https://github.com/hakimel/reveal.js#configuration
 Reveal.initialize({
 width:1200, height:800, rolling_links:true, keyboard:true, overview:true,
-plugins: [RevealChalkboard, RevealAudioSlideshow, RevealAudioRecorder],
+plugins: [ RevealMarkdown, RevealMenu, RevealChalkboard, RevealAudioSlideshow, RevealAudioRecorder],
 multiplex: {
     secret: '', // null if client
     id: '', // id, obtained from socket.io server
@@ -110,7 +130,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'audio/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Links', icon:  '<i class="fa fa-external-link-alt"></i>', src: 'links.html' }, ] }, chalkboard: { src: "chalkboard.json", toggleChalkboardButton: {left: "80px"}, toggleNotesButton: {left: "130px"}, }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: false, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: true, },});
 </script>
 </body>
 </html>
