--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
 
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -27,28 +27,42 @@
 <body>
 <div class="reveal">
 <div class="slides">
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
 <script src="../../reveal.js/plugin/zoom/zoom.js"></script>
 <script src="../../reveal.js/plugin/notes/notes.js"></script>
 <script src="../../reveal.js/plugin/search/search.js"></script>
 <script src="../../reveal.js/plugin/markdown/markdown.js"></script>
+<!---script src="../../reveal.js/plugin/highlight/highlight.js"></script--->
+<script src="./captions.js"></script>
+
+<script src="../../reveal.js-plugins/menu/menu.js"></script>
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
+
 
 <script src="../../reveal.js-plugins/chalkboard/plugin.js"></script>
-
 <script src="../../reveal.js-plugins/audio-slideshow/plugin.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
+
 <section>
-<section id="slide-org172d3cb">
-<h2 id="org172d3cb">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org037d22f">
+<h2 id="org037d22f">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
+
+<p class="fragment" data-audio-src="mass/title.ogg"></p>
+
+<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
+
 
 </section>
 </section>
 <section>
-<section id="slide-org7c8f77e">
-<h2 id="org7c8f77e">Overview</h2>
+<section id="slide-orge1e6321">
+<h2 id="orge1e6321">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -74,13 +88,13 @@ We start our discussion of balances with the mass balance.
 </section>
 </section>
 <section>
-<section id="slide-org4988fca">
-<h2 id="org4988fca">Tank filling &amp; draining</h2>
-<div class="outline-text-2" id="text-org4988fca">
+<section id="slide-orgbce4a31">
+<h2 id="orgbce4a31">Tank filling &amp; draining</h2>
+<div class="outline-text-2" id="text-orgbce4a31">
 </div>
 </section>
-<section id="slide-org2a6c44f">
-<h3 id="org2a6c44f">Tank filling</h3>
+<section id="slide-org2cf2406">
+<h3 id="org2cf2406">Tank filling</h3>
 <p>
 Mass balance:
 </p>
@@ -99,8 +113,8 @@ nil
 
 
 </section>
-<section id="slide-orgb0c73da">
-<h3 id="orgb0c73da">Determining the flow rate</h3>
+<section id="slide-org42853cc">
+<h3 id="org42853cc">Determining the flow rate</h3>
 <aside class="notes">
 <p>
 
@@ -138,8 +152,8 @@ V &= A h
 </aside>
 
 </section>
-<section id="slide-orgb0d84de">
-<h3 id="orgb0d84de">Time varying measurement</h3>
+<section id="slide-orga3110cd">
+<h3 id="orga3110cd">Time varying measurement</h3>
 <aside class="notes">
 <p>
 
@@ -191,8 +205,8 @@ time \(t\) by
 </aside>
 
 </section>
-<section id="slide-orgd0024e3">
-<h3 id="orgd0024e3">Determining the water level</h3>
+<section id="slide-org9c06675">
+<h3 id="org9c06675">Determining the water level</h3>
 <aside class="notes">
 <p>
 
@@ -255,8 +269,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-orge536cab">
-<h3 id="orge536cab">Tank drainage</h3>
+<section id="slide-orgfd1fdd2">
+<h3 id="orgfd1fdd2">Tank drainage</h3>
 <aside class="notes">
 <p>
 
@@ -265,8 +279,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-org375978a">
-<h3 id="org375978a"></h3>
+<section id="slide-org175867f">
+<h3 id="org175867f"></h3>
 <aside class="notes">
 <p>
 
@@ -275,8 +289,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-org9984561">
-<h3 id="org9984561">Combining draining and filling</h3>
+<section id="slide-orgf6974e9">
+<h3 id="orgf6974e9">Combining draining and filling</h3>
 <p>
 Mass balance:
 </p>
@@ -292,13 +306,13 @@ Mass balance:
 </section>
 </section>
 <section>
-<section id="slide-org56e864f">
-<h2 id="org56e864f">Distributed flow</h2>
-<div class="outline-text-2" id="text-org56e864f">
+<section id="slide-orgb39376b">
+<h2 id="orgb39376b">Distributed flow</h2>
+<div class="outline-text-2" id="text-orgb39376b">
 </div>
 </section>
-<section id="slide-org2691377">
-<h3 id="org2691377">velocity and volumetric flowrate</h3>
+<section id="slide-org4f6f2a0">
+<h3 id="org4f6f2a0">velocity and volumetric flowrate</h3>
 <aside class="notes">
 <p>
 
@@ -324,19 +338,22 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-orgbe9475f">
-<h2 id="orgbe9475f">Species balance</h2>
-<div class="outline-text-2" id="text-orgbe9475f">
+<section id="slide-org754e8f3">
+<h2 id="org754e8f3">Species balance</h2>
+<div class="outline-text-2" id="text-org754e8f3">
 </div>
 </section>
-<section id="slide-org2555380">
-<h3 id="org2555380"></h3>
+<section id="slide-org7907a2b">
+<h3 id="org7907a2b"></h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org644fbb4">
-<h2 id="org644fbb4">Summary</h2>
+<section id="slide-org6f32063">
+<h2 id="org6f32063">Summary</h2>
+<aside class="notes">
+nil
+</aside>
 </section>
 </section>
 </div>
@@ -348,7 +365,7 @@ dV = A dh
 // https://github.com/hakimel/reveal.js#configuration
 Reveal.initialize({
 width:1200, height:800, rolling_links:true, keyboard:true, overview:true,
-plugins: [RevealChalkboard, RevealAudioSlideshow, RevealAudioRecorder],
+plugins: [ RevealMarkdown, RevealMenu, RevealChalkboard, RevealAudioSlideshow, RevealAudioRecorder],
 multiplex: {
     secret: '', // null if client
     id: '', // id, obtained from socket.io server
@@ -358,7 +375,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'audio/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Links', icon:  '<i class="fa fa-external-link-alt"></i>', src: 'links.html' }, ] }, chalkboard: { src: "chalkboard.json", toggleChalkboardButton: {left: "80px"}, toggleNotesButton: {left: "130px"}, }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: false, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: true, },});
 </script>
 </body>
 </html>
