--- a/slides/ode_notes.html
+++ b/slides/ode_notes.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
 
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -22,14 +22,19 @@
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
 <div class="reveal">
 <div class="slides">
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
 <script src="../../reveal.js/plugin/zoom/zoom.js"></script>
 <script src="../../reveal.js/plugin/notes/notes.js"></script>
 <script src="../../reveal.js/plugin/search/search.js"></script>
 <script src="../../reveal.js/plugin/markdown/markdown.js"></script>
+<!---script src="../../reveal.js/plugin/highlight/highlight.js"></script--->
+<script src="./captions.js"></script>
 
 <script src="../../reveal.js-plugins/menu/menu.js"></script>
 <link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
@@ -37,21 +42,19 @@
 
 
 <script src="../../reveal.js-plugins/chalkboard/plugin.js"></script>
-
-
-
 <script src="../../reveal.js-plugins/audio-slideshow/plugin.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org5720b84">
-<h2 id="org5720b84">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org50531a5">
+<h2 id="org50531a5">CP213: Applied mathematics and problem solving</h2>
 <h2>Ordinary differential equations</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
-<p class="fragment" data-audio-src="python/1.0.ogg">
-</p>
+<p class="fragment" data-audio-src="energy/title.ogg"></p>
+
+<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
 
 
@@ -94,44 +97,140 @@ We have already encountered these types of equations
 </section>
 </section>
 <section>
-<section id="slide-orgfd5abf4">
-<h2 id="orgfd5abf4">Overview</h2>
-
-
+<section id="slide-org3d6a98f" data-audio-src="ode/overview.ogg">
+<h2 id="org3d6a98f">Overview</h2>
+<aside class="notes">
+nil
+</aside>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org6daee9c">
-<h2 id="org6daee9c">First order differential equations</h2>
-<div class="outline-text-2" id="text-org6daee9c">
+<section id="slide-org2386200">
+<h2 id="org2386200">First order differential equations</h2>
+<div class="outline-text-2" id="text-org2386200">
 </div>
 </section>
-<section id="slide-orgc92ec99">
-<h3 id="orgc92ec99">Separable</h3>
+<section id="slide-org3e4d06e">
+<h3 id="org3e4d06e">Separable</h3>
+<div>
+\begin{align*}
+\frac{dy}{dx} &= f(y) g(x)
+\end{align*}
+
+</div>
+
+
+<aside class="notes">
+<p>
+
+</p>
+
+<p>
+common mistakes include not fully isolating the terms (i.e.\ leaving a
+function of \(y\) on the $x$-side or a function of \(x\) on the $y$-side).
+The reason that this is incorrect is that we do not know a~priori how
+\(y\) depends on \(x\), or vice versa, and so we cannot perform any
+integral.
+</p>
+
+</aside>
 
 </section>
-<section id="slide-org1c273ae">
-<h3 id="org1c273ae">Linear</h3>
+<section id="slide-orgb5abd34">
+<h3 id="orgb5abd34">Linear</h3>
+<div>
+\begin{align*}
+y'(x) + p(x) y(x) &= f(x)
+\end{align*}
+
+</div>
+
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
+
+</section>
+<section id="slide-orgafb2f4b">
+<h3 id="orgafb2f4b">Integrating factor</h3>
+<p>
+integrating factor
+</p>
+<div>
+\begin{align*}
+P(x) &= \int dx'\, p(x)
+\end{align*}
+
+</div>
+
+<div>
+\begin{align*}
+e^{P(x)} y'(x) + e^{P(x)} p(x) y(x) &= f(x) e^{P(x)}
+\\
+[e^{P(x)} y(x)]'  &= f(x) e^{P(x)}
+\end{align*}
+
+</div>
+
+<aside class="notes">
+<p>
+
+</p>
+
+<p>
+A couple of points&#x2026; What if we include an integration constant in
+\(P(x)\) when determining the integrating factor?  Let's see why this
+does not really matter.  If we include this extra term, it will add a
+constant, multiplicative factor to the integrating factor.  This can
+be canceled from all terms in the equation.  So adding an constant to
+\(P(x)\) will not impact the solution.
+</p>
+
+
+<p>
+We integrate this equation from a point \(a\), which is typically chosen
+where we know the function (i.e./ initial condition).
+</p>
+<div>
+\begin{align*}
+\int_a^x dt\, [e^{P(t)} y(t)]'  &= \int_a^x dt\, f(t) e^{P(t)}
+\\
+e^{P(x)} y(x) - e^{P(a)} y(a) &= \int_a^x dt\, f(t) e^{P(t)}
+\\
+y(x) &= e^{-P(x)+P(a)} y(a) + \int_a^x dt\, f(t) e^{-P(x)+P(t)}
+\end{align*}
+
+</div>
+<p>
+Any linear first order differential equation can be solved analytically.
+</p>
+
+</aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org5e5919a">
-<h2 id="org5e5919a">Second order differential equations</h2>
-<div class="outline-text-2" id="text-org5e5919a">
+<section id="slide-org0241906">
+<h2 id="org0241906">Second order differential equations</h2>
+<div class="outline-text-2" id="text-org0241906">
 </div>
 </section>
-<section id="slide-org09f9a28">
-<h3 id="org09f9a28">Constant coefficients</h3>
+<section id="slide-org977b7c8">
+<h3 id="org977b7c8">Constant coefficients</h3>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgc5cdb33">
-<h2 id="orgc5cdb33">Summary</h2>
+<section id="slide-orgd31c915">
+<h2 id="orgd31c915">Summary</h2>
+<aside class="notes">
+nil
+</aside>
 </section>
 </section>
 </div>
@@ -153,7 +252,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Plugins', icon: '<i class="fa fa-external-link-alt"></i>', src: 'toc.html' }, { title: 'About', icon: '<i class="fa fa-info"></i>', src: 'about.html' } ] }, chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'python/', suffix: '.ogg', textToSpeechURL: "http://api.voicerss.org/?key=f6810d3ff6e84980b30a10c447b36003&hl=eng-us&c=ogg&src=", defaultNotes: true, defaultText: false, advance: 0, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Links', icon:  '<i class="fa fa-external-link-alt"></i>', src: 'links.html' }, ] }, chalkboard: { src: "chalkboard.json", toggleChalkboardButton: {left: "80px"}, toggleNotesButton: {left: "130px"}, }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: false, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: true, },});
 </script>
 </body>
 </html>
