--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
 
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -27,10 +27,14 @@
 <body>
 <div class="reveal">
 <div class="slides">
+<link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
+
 <script src="../../reveal.js/plugin/zoom/zoom.js"></script>
 <script src="../../reveal.js/plugin/notes/notes.js"></script>
 <script src="../../reveal.js/plugin/search/search.js"></script>
 <script src="../../reveal.js/plugin/markdown/markdown.js"></script>
+<!---script src="../../reveal.js/plugin/highlight/highlight.js"></script--->
+<script src="./captions.js"></script>
 
 <script src="../../reveal.js-plugins/menu/menu.js"></script>
 <link rel="stylesheet" href="../../resources/Font-Awesome/css/fontawesome.css">
@@ -38,21 +42,20 @@
 
 
 <script src="../../reveal.js-plugins/chalkboard/plugin.js"></script>
-
-
-
 <script src="../../reveal.js-plugins/audio-slideshow/plugin.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orga280e4f">
-<h2 id="orga280e4f">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga283695">
+<h2 id="orga283695">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
-<p class="fragment" data-audio-src="python/title.mp3">
-</p>
+<p class="fragment" data-audio-src="python/title.ogg"></p>
+
+<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
+
 
 
 <aside class="notes">
@@ -66,9 +69,27 @@ introduction to the Python programming language and apply it some
 simple chemical engineering problems.
 </p>
 
+</aside>
+
+
+</section>
+</section>
+<section>
+<section id="slide-org234479c" data-audio-src="python/title.mp3">
+<h2 id="org234479c">Overview</h2>
+<ul class="fragment data-audio-src hello">
+<li>Basic elements of the language</li>
+<li>CP101 worked examples and tutorial problems</li>
+
+</ul>
+
+
+<aside class="notes">
+<p>
+
+</p>
 
 <p>
-&#x2014;
 Python is a powerful programming language that is&#x2026; widely used across
 many fields and industries.  
 </p>
@@ -138,55 +159,62 @@ to as far you want to go.
 
 
 </section>
-</section>
-<section>
-<section id="slide-orgee0b74b">
-<h2 id="orgee0b74b">Overview</h2>
-<ul class="fragment data-audio-src hello">
-<li>Basic elements of the language</li>
-<li>CP101 worked examples and tutorial problems</li>
-
-</ul>
-
-
-</section>
-<section id="slide-org01850da">
-<h3 id="org01850da">Python</h3>
+<section id="slide-org54a88f2" data-audio-src="python/title.mp3">
+<h3 id="org54a88f2">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org538f464">
-<h3 id="org538f464">Jupyter notebooks</h3>
+<section id="slide-org9fa73e6">
+<h3 id="org9fa73e6">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
 </p>
 
 <p>
+In this module
+</p>
+
+<p>
 We will implement this using Jupyter notebooks.
+</p>
+
+<p>
+There are two links that you can use to open each of the Jupyter
+notebooks provided in the module.  The first method is with the site
+mybinder.org, and the second method is with Google Colab.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-org1323287">
-<h3 id="org1323287">Installation</h3>
+<section id="slide-org8029954">
+<h3 id="org8029954">binder</h3>
+
+
+
+</section>
+<section id="slide-orgec23677">
+<h3 id="orgec23677">Google Colab</h3>
+
+
+
 
 </section>
 </section>
 <section>
-<section id="slide-orgcefb91e">
-<h2 id="orgcefb91e">Basics</h2>
-<div class="outline-text-2" id="text-orgcefb91e">
+<section id="slide-org679ee12">
+<h2 id="org679ee12">Basics</h2>
+<div class="outline-text-2" id="text-org679ee12">
 </div>
 </section>
-<section id="slide-org3792fc9">
-<h3 id="org3792fc9">Python as a calculator</h3>
+<section id="slide-org85cb10a">
+<h3 id="org85cb10a">Python as a calculator</h3>
 <div>
-<iframe allow="autoplay; fullscreen" height="606" width="1000" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=27975&amp;code=cT~vMz3yrmbyrdbJIeIFQD0suvO7UER" frameborder="0" allowfullscreen></iframe>
+<iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
 <!---video height="500" controls>
 <source  src="../recordings/python-calculator.mp4" type="video/mp4">
@@ -206,6 +234,7 @@ for more details.
 
 </p>
 
+
 <ul>
 <li><a href="https://ls-video2.ces.strath.ac.uk/View.aspx?id=27975~5r~Ly8ewrg5bK">https://ls-video2.ces.strath.ac.uk/View.aspx?id=27975~5r~Ly8ewrg5bK</a></li>
 
@@ -214,22 +243,11 @@ for more details.
 </aside>
 
 </section>
-<section id="slide-orgaf7bbae">
-<h3 id="orgaf7bbae">variables</h3>
-<ul>
-<li>integers</li>
-<li>floats</li>
-<li>strings</li>
-<li>lists</li>
-<li>dictionaries</li>
-
-</ul>
-
-</section>
-<section id="slide-org666633c">
-<h3 id="org666633c">Example using variables</h3>
+<section id="slide-org31f644f">
+<h3 id="org31f644f">Example using variables</h3>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
+<!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
 <!---video height="500" controls>
 <source  src="../recordings/python-variables.mp4" type="video/mp4" />
 </video--->
@@ -243,24 +261,31 @@ Jupyter notebook
 for more details.
 </div>
 
+</section>
+<section id="slide-org5967226">
+<h3 id="org5967226">Variables: Numbers and strings</h3>
+<ul>
+<li>numbers: integers and floats</li>
+<li>strings</li>
+
+</ul>
+
+
+<ul>
+<li>lists</li>
+<li>dictionaries</li>
+
+</ul>
+
+
 
 </section>
-<section id="slide-orgad527d9">
-<h3 id="orgad527d9">Strings</h3>
-</section>
-<section id="slide-org6daefc5">
-<h3 id="org6daefc5">printing</h3>
-<p>
-print('Hello')
-</p>
-
-<aside class="notes">
-nil
-</aside>
+<section id="slide-org9d33fde">
+<h3 id="org9d33fde">Variables: Lists</h3>
 
 </section>
-<section id="slide-org06f9a50">
-<h3 id="org06f9a50">Lists</h3>
+<section id="slide-org7d8cf16">
+<h3 id="org7d8cf16">Lists</h3>
 <ul>
 <li>comprehensions</li>
 <li>indexing
@@ -280,6 +305,7 @@ nil
 <span style="color: #00ffff;">print</span>(x_list[2])
 <span style="color: #00ffff;">print</span>(x_list[0])
 <span style="color: #00ffff;">print</span>(x_list[-1])
+<span style="color: #00ffff;">print</span>(x_list[-2])
 
 x_list.append(137.0)
 
@@ -299,9 +325,37 @@ x_list.append(137.0)
 </code></pre>
 </div>
 
+
+
 </section>
-<section id="slide-orga0c82eb">
-<h3 id="orga0c82eb">Dictionaries</h3>
+<section id="slide-orgfd5a242">
+<h3 id="orgfd5a242">Variables: Dictionaries</h3>
+
+</section>
+<section id="slide-org6e26287">
+<h3 id="org6e26287">Example using dictionaries</h3>
+
+</section>
+<section id="slide-orgdf2f19f">
+<h3 id="orgdf2f19f">More advanced use of dictionaries</h3>
+
+</section>
+<section id="slide-org89a5944">
+<h3 id="org89a5944">Strings and printing</h3>
+</section>
+<section id="slide-orgc6c8057">
+<h3 id="orgc6c8057">printing</h3>
+<p>
+print('Hello')
+</p>
+
+<aside class="notes">
+nil
+</aside>
+
+</section>
+<section id="slide-orgfd73dfc">
+<h3 id="orgfd73dfc">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -310,18 +364,30 @@ Jupyter notebook
 for more details.
 </div>
 
+<aside class="notes">
+<p>
+update
+x<sub>dict.update</sub>({'A':B})
+</p>
+
+<p>
+comprehensions
+x<sub>dict</sub> = {k:k**2 for k in range(10)}
+</p>
+
+</aside>
+
 </section>
-<section id="slide-org2c14dfa">
-<h3 id="org2c14dfa">loops</h3>
+<section id="slide-org257da11">
+<h3 id="org257da11">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
 </p>
 
-
 </section>
-<section id="slide-orgf9f634b">
-<h3 id="orgf9f634b">Functions</h3>
+<section id="slide-orgc3be003">
+<h3 id="orgc3be003">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -331,8 +397,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org9072315">
-<h3 id="org9072315">Conditionals</h3>
+<section id="slide-org71ea1ed">
+<h3 id="org71ea1ed">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -343,8 +409,8 @@ for more details.
 
 
 </section>
-<section id="slide-orgccdc6d9">
-<h3 id="orgccdc6d9">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-orgeb4cf84">
+<h3 id="orgeb4cf84">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -419,8 +485,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-orgc7a7756">
-<h2 id="orgc7a7756">Importing libraries</h2>
+<section id="slide-orge45664b">
+<h2 id="orge45664b">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -447,8 +513,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org3a4ef54">
-<h3 id="org3a4ef54">numpy</h3>
+<section id="slide-org80069a6">
+<h3 id="org80069a6">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -479,8 +545,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org424c1e1">
-<h3 id="org424c1e1">importing numpy</h3>
+<section id="slide-org3b463ca">
+<h3 id="org3b463ca">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -508,8 +574,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-org949bc80">
-<h3 id="org949bc80">matplotlib / pylab</h3>
+<section id="slide-org0bc41c4">
+<h3 id="org0bc41c4">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -532,8 +598,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org75d9a33">
-<h3 id="org75d9a33">scipy</h3>
+<section id="slide-orgc0eea7d">
+<h3 id="orgc0eea7d">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -544,8 +610,8 @@ nil
 
 
 </section>
-<section id="slide-org499b695">
-<h3 id="org499b695">sympy</h3>
+<section id="slide-orga961d33">
+<h3 id="orga961d33">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -560,8 +626,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgf422667">
-<h3 id="orgf422667">sympy</h3>
+<section id="slide-org4ae758d">
+<h3 id="org4ae758d">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -574,16 +640,44 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgf081a7d">
-<h2 id="orgf081a7d">Further resources</h2>
+<section id="slide-org7f59a2d">
+<h2 id="org7f59a2d">Further resources</h2>
+<div class="outline-text-2" id="text-org7f59a2d">
+</div>
+</section>
+<section id="slide-org04ffc1c">
+<h3 id="org04ffc1c">Installation</h3>
+<p>
+If you are interested in installing 
+[[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
+</p>
 
+<aside class="notes">
+<p>
 
+</p>
 
+<p>
+All the work required in this module can be performed from the
+</p>
+
+<p>
+For the purposes of this module, there is no need to 
+</p>
+
+<p>
+If you are interested in installing Python
+</p>
+
+</aside>
 </section>
 </section>
 <section>
-<section id="slide-orge1a2e14">
-<h2 id="orge1a2e14">Summary</h2>
+<section id="slide-orgcd0824d">
+<h2 id="orgcd0824d">Summary</h2>
+<aside class="notes">
+nil
+</aside>
 </section>
 </section>
 </div>
@@ -605,7 +699,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Plugins', icon: '<i class="fa fa-external-link-alt"></i>', src: 'toc.html' }, { title: 'About', icon: '<i class="fa fa-info"></i>', src: 'about.html' } ] }, chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'python/', suffix: '.ogg', textToSpeechURL: "http://api.voicerss.org/?key=f6810d3ff6e84980b30a10c447b36003&hl=eng-us&c=ogg&src=", defaultNotes: true, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Links', icon:  '<i class="fa fa-external-link-alt"></i>', src: 'links.html' }, ] }, chalkboard: { src: "chalkboard.json", toggleChalkboardButton: {left: "80px"}, toggleNotesButton: {left: "130px"}, }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: null, defaultNotes: false, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: false, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: true, },});
 </script>
 </body>
 </html>
