--- a/slides/index.html
+++ b/slides/index.html
@@ -47,41 +47,56 @@
 
 
 <section>
-<section id="slide-orge1b9f83">
-<h2 id="orge1b9f83">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-org4f9f23b">
+<h2 id="org4f9f23b">CP213: Applied Mathematics and Problem Solving</h2>
+<p>
+<a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace site</a>
+</p>
+
+<p>
+Schedule:
+</p>
 <ul>
 <li>Week 0: <a href="./intro_notes-2020.html">Module overview</a></li>
-<li>Week 1: <a href="./python_notes.html">Introduction to Python</a></li>
+<li>Week 1: <a href="./python_notes.html">Introduction to Python</a> / Tutorial <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb"><object type="image/svg+xml" data="https://mybinder.org/badge.svg" class="org-svg">
+Sorry, your browser does not support SVG.</object></a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb"><object type="image/svg+xml" data="https://colab.research.google.com/assets/colab-badge.svg" class="org-svg">
+Sorry, your browser does not support SVG.</object></a></li>
 <li>Weeks 2-4: Differential balances
 <ul>
-<li><a href="./mass_notes.html">Mass and species balances</a></li>
-<li><a href="./energy_notes.html">Energy balances</a></li>
-<li><a href="./momentum_notes.html">Momentum/force balances</a></li>
+<li><a href="./mass_notes.html">Mass and species balances</a> / Tutorial  <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week2.ipynb"><object type="image/svg+xml" data="https://mybinder.org/badge.svg" class="org-svg">
+Sorry, your browser does not support SVG.</object></a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week2.ipynb"><object type="image/svg+xml" data="https://colab.research.google.com/assets/colab-badge.svg" class="org-svg">
+Sorry, your browser does not support SVG.</object></a></li>
+<li><a href="./energy_notes.html">Energy balances</a> / Tutorial</li>
+<li><a href="./momentum_notes.html">Momentum/force balances</a> / Tutorial</li>
 
 </ul></li>
-<li>Weeks 5-8: <a href="./ode_notes.html">Ordinary differential equations</a></li>
-<li>Weeks 9-10: <a href="./multivariate_notes.html">Multivariate calculus</a></li>
+<li>Weeks 5-8: <a href="./ode_notes.html">Ordinary differential equations</a> / Tutorial</li>
+<li>Weeks 9-10: <a href="./multivariate_notes.html">Multivariate calculus</a> / Tutorial</li>
 
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-orgb69a6fa">
-<h2 id="orgb69a6fa">Introduction to Python</h2>
+<section id="slide-orgc56c075">
+<h2 id="orgc56c075">Introduction to Python</h2>
 <p>
 Week 1
 </p>
 
-<p>
-For on-line materials, click <a href="./python_notes.html">here</a>.
-</p>
+<ul>
+<li>For lecture materials, click <a href="./python_notes.html">here</a>.</li>
+<li>For tutorial sheet, click <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb"><object type="image/svg+xml" data="https://mybinder.org/badge.svg" class="org-svg">
+Sorry, your browser does not support SVG.</object></a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb"><object type="image/svg+xml" data="https://colab.research.google.com/assets/colab-badge.svg" class="org-svg">
+Sorry, your browser does not support SVG.</object></a></li>
+
+</ul>
 
 </section>
 </section>
 <section>
-<section id="slide-orgfeedc8a">
-<h2 id="orgfeedc8a">Differential balances</h2>
+<section id="slide-orgb1f5ee0">
+<h2 id="orgb1f5ee0">Differential balances</h2>
 <p>
 Weeks 2-4
 </p>
@@ -95,20 +110,20 @@ Weeks 2-4
 
 
 </section>
-<section id="slide-orgf35634c">
-<h3 id="orgf35634c">Mass and species balances</h3>
+<section id="slide-org9566b4e">
+<h3 id="org9566b4e">Mass and species balances</h3>
 </section>
-<section id="slide-org5282792">
-<h3 id="org5282792">Energy balance</h3>
+<section id="slide-org1e5c7ef">
+<h3 id="org1e5c7ef">Energy balance</h3>
 </section>
-<section id="slide-org48ef0d7">
-<h3 id="org48ef0d7">Momentum and force balances</h3>
+<section id="slide-org958d786">
+<h3 id="org958d786">Momentum and force balances</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgd6523d8">
-<h2 id="orgd6523d8">Ordinary differential equations</h2>
+<section id="slide-org59bfe3a">
+<h2 id="org59bfe3a">Ordinary differential equations</h2>
 <p>
 Weeks 5-8
 </p>
@@ -119,20 +134,20 @@ Weeks 5-8
 </ul>
 
 </section>
-<section id="slide-org109a570">
-<h3 id="org109a570">First order</h3>
+<section id="slide-orgac3310e">
+<h3 id="orgac3310e">First order</h3>
 </section>
-<section id="slide-org7d3330a">
-<h3 id="org7d3330a">Second order</h3>
+<section id="slide-org7af3c36">
+<h3 id="org7af3c36">Second order</h3>
 </section>
-<section id="slide-org31b38b0">
-<h3 id="org31b38b0">Numerical methods</h3>
+<section id="slide-orgc78c3d5">
+<h3 id="orgc78c3d5">Numerical methods</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org80c28e7">
-<h2 id="org80c28e7">Multivariate calculus</h2>
+<section id="slide-org47a4509">
+<h2 id="org47a4509">Multivariate calculus</h2>
 <p>
 Weeks 9-10
 </p>
@@ -143,12 +158,12 @@ Weeks 9-10
 </ul>
 
 </section>
-<section id="slide-org7181674">
-<h3 id="org7181674">Partial derivatives</h3>
+<section id="slide-org0ff5916">
+<h3 id="org0ff5916">Partial derivatives</h3>
 
 </section>
-<section id="slide-orgce13f1c">
-<h3 id="orgce13f1c">Multiple integration</h3>
+<section id="slide-orgbc59540">
+<h3 id="orgbc59540">Multiple integration</h3>
 </section>
 </section>
 </div>
